# realsense_tag_tracking

./: README.md  Repository File Descriptions.docx
RealsenseFiles/: _d435.urdf.xacro  rs_d435_camera.launch  test_d435_camera.urdf.xacro
realsense_ar_tracking_2/: CMakeLists.txt  package.xml
realsense_ar_tracking_2/bundles/: calibration.xml  fridge.xml  sealer.xml
realsense_ar_tracking_2/launch/: camera_calibration.launch  realsense_track.launch  sealer_fridge_calibration.launch  test_alvar.launch
realsense_ar_tracking_2/src/: alvar_tester.cpp  alvar_tester.h  calibrator.cpp  calibrator.h  camera_calib.cpp  main.cpp  sealer_fridge_calib.cpp  test_alvar.cpp  tf_broadcaster.cpp  tracker.cpp  tracker.h
